# cse845

./: README.md  Relevant Papers.txt  gen_fluc_type_figs.py  gen_paper_figs.py  paper_outline.txt
chow_replication/: fig_gen.py
chow_replication/clustering/: genebank.cpp  genebank.h  preprocess.py  tree_analyzer.cpp
chow_replication/replication_config_files/: analyze_01.cfg  analyze_1.cfg  analyze_10.cfg  analyze_100.cfg  analyze_1000.cfg  analyze_10000.cfg  analyze_100000.cfg  avida.cfg  environment_01.cfg  environment_1.cfg  environment_10.cfg  environment_1000.cfg  environment_10000.cfg  environment_100000.cfg  events.cfg
chow_replication/replication_data_analysis_files/: analysis_code.py  analyze_cluster_algo_data.py  run_analysis.py
chow_replication/replication_sub_files/: analysis.sub  avida_01.sub  avida_1.sub  avida_10.sub  avida_100.sub  avida_1000.sub  avida_10000.sub  avida_100000.sub  avida_a_01.sub  avida_a_1.sub  avida_a_10.sub  avida_a_100.sub  avida_a_1000.sub  avida_a_10000.sub  avida_a_100000.sub  cluster_algo_01.sub  cluster_algo_1.sub  cluster_algo_10.sub  cluster_algo_100.sub  cluster_algo_1000.sub  cluster_algo_10000.sub  cluster_algo_100000.sub  cluster_analysis.sub
class_configs/: analyze.cfg  events.cfg
fluc_env/clustering/: treeCS.cpp
fluc_env/config_files/: analyze_equ_lowhigh_1.cfg  analyze_equ_lowhigh_10.cfg  analyze_equ_lowhigh_100.cfg  analyze_equ_lowhigh_1000.cfg  analyze_equ_lowhigh_10000.cfg  analyze_equ_lowhigh_100000.cfg  analyze_equ_stag_1.cfg  analyze_equ_stag_10.cfg  analyze_equ_stag_100.cfg  analyze_equ_stag_1000.cfg  analyze_equ_stag_10000.cfg  analyze_equ_stag_100000.cfg  analyze_equ_sync_1.cfg  analyze_equ_sync_10.cfg  analyze_equ_sync_100.cfg  analyze_equ_sync_1000.cfg  analyze_equ_sync_10000.cfg  analyze_equ_sync_100000.cfg  analyze_lowhigh_1.cfg  analyze_lowhigh_10.cfg  analyze_lowhigh_100.cfg  analyze_lowhigh_1000.cfg  analyze_lowhigh_10000.cfg  analyze_lowhigh_100000.cfg  analyze_stag_1.cfg  analyze_stag_10.cfg  analyze_stag_100.cfg  analyze_stag_1000.cfg  analyze_stag_10000.cfg  analyze_stag_100000.cfg  analyze_sync_1.cfg  analyze_sync_10.cfg  analyze_sync_100.cfg  analyze_sync_1000.cfg  analyze_sync_10000.cfg  analyze_sync_100000.cfg  environment.cfg  environment_analyze.cfg  environment_stag.cfg  events_lowhigh_1.cfg  (+14 more)
fluc_env/data_analysis_files/: analysis_code.py  analyze_cluster_algo_data.py  analyze_foo.py  run_analysis.py  split_clusters.ipynb
fluc_env/sub_files/: analysis.sub  avida_a_equ_lowhigh_1.sub  avida_a_equ_lowhigh_10.sub  avida_a_equ_lowhigh_100.sub  avida_a_equ_lowhigh_1000.sub  avida_a_equ_lowhigh_10000.sub  avida_a_equ_lowhigh_100000.sub  avida_a_equ_stag_1.sub  avida_a_equ_stag_10.sub  avida_a_equ_stag_100.sub  avida_a_equ_stag_1000.sub  avida_a_equ_stag_10000.sub  avida_a_equ_stag_100000.sub  avida_a_equ_sync_1.sub  avida_a_equ_sync_10.sub  avida_a_equ_sync_100.sub  avida_a_lowhigh_1.sub  (+60 more)
manuscript/: Makefile  full_article.tex
original_paper/: README
original_paper/source/avida/source/: Makefile.am  Makefile.in  defs.hh
original_paper/source/avida/source/cpu/: Makefile.am  Makefile.in  cpu_memory.cc  cpu_memory.hh  cpu_stack.cc  cpu_stack.hh  cpu_stats.hh  hardware_base.cc  hardware_base.hh  hardware_cpu.cc  hardware_cpu.hh  hardware_factory.cc  hardware_util.cc  hardware_util.hh  head.cc  label.cc  label.hh  test_cpu.cc  test_cpu.hh  test_util.cc
original_paper/source/avida/source/event/: Makefile.am  Makefile.in  cPopulation.events  event.cc  event_factory.cc  event_factory_manager.cc  event_factory_manager.hh  event_list.cc  event_list.hh  population_event_factory.cc
original_paper/source/avida/source/main/: Makefile.am  Makefile.in  analyze.cc  analyze.hh  analyze_util.cc  analyze_util.hh  avida.cc  birth_chamber.cc  birth_chamber.hh  callback_util.cc  callback_util.hh  config.cc  config.hh  environment.cc  environment.hh  fitness_matrix.cc  fitness_matrix.hh  genebank.cc  genebank.hh  genome.cc  genome_util.cc  genotype.cc  genotype.hh  inst.cc  inst_lib.cc  inst_lib.hh  inst_util.cc  inst_util.hh  landscape.cc  landscape.hh  lineage.cc  lineage.hh  lineage_control.cc  lineage_control.hh  mutations.cc  mutations.hh  organism.cc  organism.hh  phenotype.cc  phenotype.hh  (+17 more)
original_paper/source/avida/source/qt-viewer/: Makefile.am  Makefile.in  TODO  apocalypse_widget.cc  apocalypse_widget.hh  avd_cell_view_list_item.cc  avd_cell_view_list_item.hh  avd_hide_show_button.cc  avd_hide_show_button.hh  avd_message_queue.hh  avd_message_queue_t.cc  avd_message_queue_t.hh  avd_rate_slider2.cc  avd_rate_validator2.cc  avd_widget_list.cc  avd_widget_list.hh  avd_widget_list_container.cc  avd_widget_list_item.cc  avd_widget_list_item.hh  avd_widget_list_item_container.cc  avd_widget_list_item_container.hh  avida_data.cc  avida_data.hh  avida_driver.cc  avida_driver.hh  avida_driver_messages.cc  avida_plot_widget.cc  avida_plot_widget.hh  avida_thread_driver.cc  cell_view_widget.cc  cell_view_widget.hh  child_info_list_item.cc  child_info_list_item.hh  code_widget.cc  code_widget.hh  color_scale_widget.cc  color_scale_widget_t.cc  cpu-widget_t.cc  creature_view.cc  creature_view.hh  (+83 more)
original_paper/source/avida/source/support/: Makefile.am  Makefile.in  analyze.cfg  environment.cfg  events.cfg  genesis
original_paper/source/avida/source/support/preset_organisms/: Makefile.in
original_paper/source/avida/source/tools/: Makefile.am  Makefile.in  data_entry.cc  data_entry.hh  data_manager.cc  data_manager.hh  datafile.cc  datafile.hh  file.cc  file.hh  functions.hh  help.hh  merit.cc  merit.hh  message_display.cc  message_display.hh  random.cc  random.hh  slice.cc  slice.hh  stat.cc  stat.hh  string.cc  string.hh  string_list.cc  string_util.cc  tArray.hh  tBuffer.hh  tVector.hh  tools.cc  weighted_index.cc
original_paper/source/avida/source/viewers/: Makefile.am  Makefile.in  ansi.cc  bar_screen.cc  hist_screen.cc  map_screen.cc  menu.cc  ncurses.cc  ncurses.hh  options_screen.cc  stats_screen.cc  symbol_util.cc  text_screen.cc  view.cc  viewer.cc  zoom_screen.cc
tutorial/: Tutorial.docx
(+76 files in other folders)
